--- a/scss/_mediaquerrys.scss
+++ b/scss/_mediaquerrys.scss
@@ -56,14 +56,23 @@
         max-height: 10rem;
     }
 
-}
-
 
 /* -------------- pag LOGIN ----------------------- */
 
 
 .form__login{
     padding: 3rem 10rem !important;
+}
+
+
+/* ---------------- pag CAPACITACION ----------------------- */
+
+
+.showcase__capacitacion p {
+    padding-top: 0.1rem !important;
+}
+
+
 }
 
 /* -------------------------- T A B L E T ----------------------------------- */
@@ -82,7 +91,7 @@
         min-height: 9.2rem;
         
     }
-    h2 {
+    .page__subtitle h2 {
         font-size: 1rem !important;
         font-weight: 500 !important;
     }
@@ -142,11 +151,43 @@
 
 
 
-/* -------------- pag CONTACTANOS ----------------------- */
+/* ---------------- pag CONTACTANOS ----------------------- */
 
 .main__logo--formulario{
     display: none;
 }
+
+
+/* ------------------ pag EVENTOS ----------------------- */
+
+.showcase__cards{
+    grid-template-columns: 1fr !important;
+    grid-template-rows: 1fr 1fr 1fr !important;
+    margin: 1rem 4rem !important;
+    gap: 1.5rem !important;
+}
+
+
+/* ---------------- pag CAPACITACION ----------------------- */
+
+.showcase__capacitacion p {
+    padding-top: 0.1rem !important;
+}
+
+.banner1 h5 {
+    margin-right: 1rem;
+}
+
+.banner__contenido div{
+    margin-top: 1rem;
+}
+
+.cards__capacitacion{
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr !important;
+}
+
+
 
 
 }
@@ -195,7 +236,7 @@
     
 /* ------------------ pag INDEX ----------------------- */
 
-h2 {
+.page__subtitle h2 {
     font-size: 0.8rem !important;
     font-weight: 500 !important;
 }
@@ -243,11 +284,60 @@ h4{
     }
 
 }
-}
-
 
 /* -------------- pag LOGIN ----------------------- */
 
 .main__login{
     height: 80vh !important;
+}
+
+
+/* ------------------ pag EVENTOS ----------------------- */
+
+.showcase__cards{
+    margin: 1rem 3rem !important;
+    gap: 1rem !important;
+}
+
+.showcase h1{
+    font-size: 3rem !important;
+}
+
+
+/* -------------- pag CONTACTANOS ----------------------- */
+
+.main__contactanos--titulo--hijo{
+    font-size: 3.5rem !important;
+}
+
+
+/* ---------------- pag CAPACITACION ----------------------- */
+
+.showcase__capacitacion h1 {
+    font-size: 2.5rem !important;
+}
+
+.showcase__capacitacion p{
+    font-size: 1rem !important;
+} 
+
+
+.banner__titulo h2{
+    font-size: 2.5rem !important;
+}
+
+.banner__contenido label{
+    font-size: 0.8rem !important;
+}
+
+.banner__contenido h5{
+    font-size: 1rem !important;
+}
+
+
+.cards__capacitacion--individuales h3{
+    font-size: 2rem !important;
+}
+
+
 }
