--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,9 @@ a {
   padding-left: 9rem;
   padding-top: 1.25rem; }
 
+.header__buscador--input {
+  width: 15vw; }
+
 .header__navegador {
   padding: 1rem 0.1rem;
   display: flex; }
@@ -110,20 +113,20 @@ a {
   h4 {
     font-size: 1.1rem; }
   .page__title {
-    top: 29%;
+    top: 15% !important;
     left: 0%;
     right: 0%; }
   h1 {
     font-size: 4.3rem; }
   .page__subtitle {
-    top: 69%;
+    top: 50% !important;
     left: 0%;
     right: 0%;
     padding: 0.5rem; }
   h2 {
     font-size: 1.3rem; }
   .main__btn {
-    top: 55%;
+    top: 75% !important;
     left: 0%;
     right: 0%; }
   .botonesheader {
@@ -154,13 +157,15 @@ a {
     font-size: 1rem !important;
     font-weight: 500 !important; }
   .page__subtitle {
-    top: 50% !important; }
+    top: 40% !important; }
   .page__title {
-    top: 20% !important; }
+    top: 15% !important; }
   h1 {
     font-size: 3.8rem !important; }
   .main__btn {
-    top: 70% !important; }
+    top: 55% !important; }
+  .quieroinscribirme {
+    padding: 0.5rem 0.75rem !important; }
   .header__boton_desplegable {
     display: block; }
   .header__navegador {
@@ -229,13 +234,13 @@ a {
     font-size: 0.8rem !important;
     font-weight: 500 !important; }
   .page__subtitle {
-    top: 30% !important; }
+    top: 25% !important; }
   .page__title {
-    top: 15% !important; }
+    top: 12% !important; }
   h1 {
     font-size: 2.4rem !important; }
   .main__btn {
-    top: 50% !important; }
+    top: 40% !important; }
   .quieroinscribirme {
     padding: 0.3rem !important;
     font-size: medium !important; }
