--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,8 @@ a {
   /* ---------------- pag CONTACTANOS ----------------------- */
   .main__logo--formulario {
     display: none; }
+  .main__contactanos--titulo {
+    top: 60%; }
   /* ------------------ pag EVENTOS ----------------------- */
   .showcase__cards, .cards__capacitacion {
     grid-template-columns: 1fr !important;
@@ -266,6 +268,8 @@ a {
   /* -------------- pag CONTACTANOS ----------------------- */
   .main__contactanos--titulo--hijo, .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label, .cards__capacitacion--individuales h3 {
     font-size: 3.5rem !important; }
+  .main__contactanos--titulo {
+    top: 70%; }
   /* ---------------- pag CAPACITACION ----------------------- */
   .showcase__capacitacion h1 {
     font-size: 2.5rem !important; }
