--- a/scss/_mediaquerrys.scss
+++ b/scss/_mediaquerrys.scss
@@ -162,6 +162,10 @@
     display: none;
 }
 
+.main__contactanos--titulo{
+    top: 60%
+}  
+
 
 /* ------------------ pag EVENTOS ----------------------- */
 
@@ -313,6 +317,10 @@ h4{
 .main__contactanos--titulo--hijo{
     font-size: 3.5rem !important;
 }
+
+.main__contactanos--titulo{
+    top: 70%
+}  
 
 
 /* ---------------- pag CAPACITACION ----------------------- */
