--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,8 @@ a {
     grid-template-rows: 1fr 1fr 1fr !important;
     margin: 1rem 4rem !important;
     gap: 1.5rem !important; }
+  .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label {
+    font-size: 3.5rem !important; }
   /* ---------------- pag CAPACITACION ----------------------- */
   .showcase__capacitacion p {
     padding-top: 0.1rem !important; }
@@ -231,6 +233,10 @@ a {
     margin: 0.4rem; }
   .header__navegador {
     top: 4.2rem !important; }
+  .footer__nav p {
+    font-size: 0.7rem; }
+  .footer__nav a {
+    font-size: 0.7rem; }
   /* ------------------ pag INDEX ----------------------- */
   .page__subtitle h2 {
     font-size: 0.8rem !important;
@@ -240,7 +246,7 @@ a {
   .page__title {
     top: 12% !important; }
   h1 {
-    font-size: 2.4rem !important; }
+    font-size: 1.8rem !important; }
   .main__btn {
     top: 40% !important; }
   .quieroinscribirme {
@@ -261,12 +267,14 @@ a {
     height: 80vh !important; }
   /* ------------------ pag EVENTOS ----------------------- */
   .showcase__cards, .cards__capacitacion {
-    margin: 1rem 3rem !important;
+    margin: 1rem 1rem !important;
     gap: 1rem !important; }
   .showcase h1 {
-    font-size: 3rem !important; }
+    font-size: 2.5rem !important; }
+  .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label {
+    font-size: 2rem !important; }
   /* -------------- pag CONTACTANOS ----------------------- */
-  .main__contactanos--titulo--hijo, .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label, .cards__capacitacion--individuales h3 {
+  .main__contactanos--titulo--hijo, .cards__capacitacion--individuales h3 {
     font-size: 3.5rem !important; }
   .main__contactanos--titulo {
     top: 70%; }
@@ -281,8 +289,15 @@ a {
     font-size: 0.8rem !important; }
   .banner__contenido h5, .banner__contenido .banner__contenido--inputs input label, .banner__contenido--inputs input .banner__contenido label {
     font-size: 1rem !important; }
+  .banner__contenido--padre {
+    padding: 0 0.75rem !important;
+    flex-direction: column; }
   .cards__capacitacion--individuales h3 {
-    font-size: 2rem !important; } }
+    font-size: 2rem !important; }
+  .banner__contenido--inputs input {
+    margin-top: 0.65rem !important; }
+  .cards__capacitacion {
+    margin: 0.3rem 0.3rem !important; } }
 
 * {
   font-family: 'Cabin', sans-serif;
@@ -434,7 +449,7 @@ h4 {
   left: 4%;
   text-shadow: 5px 5px 2px black; }
 
-.main__contactanos--titulo--hijo, .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label, .cards__capacitacion--individuales h3 {
+.main__contactanos--titulo--hijo, .cards__capacitacion--individuales h3 {
   font-family: 'Square Peg';
   font-size: 5rem;
   color: #ffa537; }
@@ -525,6 +540,8 @@ h4 {
     width: 100%;
     height: 19rem; }
   .showcase__cards h5, .cards__capacitacion h5, .showcase__cards .banner__contenido--inputs input label, .banner__contenido--inputs input .showcase__cards label, .cards__capacitacion .banner__contenido--inputs input label, .banner__contenido--inputs input .cards__capacitacion label {
+    font-family: 'Square Peg';
+    color: #ffa537;
     font-size: 1.8rem;
     padding-bottom: 0.5rem; }
   .showcase__cards p, .cards__capacitacion p {
