--- a/scss/_mediaquerrys.scss
+++ b/scss/_mediaquerrys.scss
@@ -270,7 +270,7 @@
 }
 
 .page__title{
-    top: 12% !important;
+    top: 15% !important;
 }
 
 h1{
@@ -278,7 +278,7 @@ h1{
 }
 
 .main__btn {
-    top: 40% !important;
+    top: 45% !important;
 }
 
 .quieroinscribirme{
@@ -297,6 +297,7 @@ h4{
 .main{
     &_video--contenedor{
         width: 100% !important;
+        padding: 5vw !important;
     }
 
 
@@ -345,6 +346,7 @@ h4{
 
 .showcase__capacitacion h1 {
     font-size: 2.5rem !important;
+    padding-bottom: 1rem !important;
 }
 
 .showcase__capacitacion p{
