--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,9 @@ a {
     align-items: center; }
   /* -------------- pag CONTACTANOS ----------------------- */
   .logo__formulario {
-    max-height: 10rem; }
+    max-height: 22rem; }
+  .main__contactanos--titulo {
+    top: 45% !important; }
   /* -------------- pag LOGIN ----------------------- */
   .form__login {
     padding: 3rem 10rem !important; }
@@ -157,13 +159,13 @@ a {
     font-size: 1rem !important;
     font-weight: 500 !important; }
   .page__subtitle {
-    top: 40% !important; }
+    top: 45% !important; }
   .page__title {
     top: 15% !important; }
   h1 {
     font-size: 3.8rem !important; }
   .main__btn {
-    top: 55% !important; }
+    top: 65% !important; }
   .quieroinscribirme {
     padding: 0.5rem 0.75rem !important; }
   .header__boton_desplegable {
@@ -190,8 +192,13 @@ a {
   /* ---------------- pag CONTACTANOS ----------------------- */
   .main__logo--formulario {
     display: none; }
-  .main__contactanos--titulo {
-    top: 60%; }
+  .main__contactanos--titulo--hijo, .cards__capacitacion--individuales h3 {
+    font-size: 4rem !important; }
+  .main__formulario--contenedor {
+    grid-template-columns: 1fr !important; }
+  /* .main__contactanos--titulo{
+    top: 55% !important;
+} */
   /* ------------------ pag EVENTOS ----------------------- */
   .showcase__cards, .cards__capacitacion {
     grid-template-columns: 1fr !important;
@@ -300,6 +307,30 @@ a {
     margin-top: 0.65rem !important; }
   .cards__capacitacion {
     margin: 0.3rem 0.3rem !important; } }
+
+@media only screen and (max-width: 370px) {
+  .main__btn {
+    top: 52% !important; }
+  .video {
+    padding-top: 3rem; }
+  .main_video--contenedor {
+    height: auto !important;
+    width: auto !important;
+    padding: 0.1rem !important; }
+  .main__video {
+    width: fit-content !important; }
+  /* ------------------ pag EVENTOS ----------------------- */
+  .showcase h1 {
+    font-size: 2rem !important;
+    justify-self: center !important; }
+  /* -------------- pag LOGIN ----------------------- */
+  .form__login {
+    padding: 1.5rem 2rem !important; }
+  /* ---------------- pag CAPACITACION ----------------------- */
+  .showcase__capacitacion h1 {
+    font-size: 1.9rem !important; }
+  .banner__titulo h2 {
+    font-size: 2.2rem !important; } }
 
 * {
   font-family: 'Cabin', sans-serif;
@@ -447,7 +478,7 @@ h4 {
 .main__contactanos--titulo {
   text-align: center;
   position: absolute;
-  top: 70%;
+  top: 40%;
   left: 4%;
   text-shadow: 5px 5px 2px black; }
 
@@ -506,7 +537,9 @@ h4 {
 
 .logo__formulario {
   display: flex;
-  max-height: 30rem; }
+  height: auto;
+  width: auto;
+  flex-wrap: wrap; }
 
 /* -------------- pag EVENTOS ----------------------- */
 .showcase {
@@ -643,3 +676,6 @@ h4 {
   padding-bottom: 1rem;
   padding-top: 0.3rem;
   font-weight: 500; }
+
+.cards__capacitacion--individuales i {
+  margin-bottom: 1rem !important; }
