--- a/scss/_mediaquerrys.scss
+++ b/scss/_mediaquerrys.scss
@@ -52,9 +52,13 @@
 /* -------------- pag CONTACTANOS ----------------------- */
 
 
-    .logo__formulario{
-        max-height: 10rem;
-    }
+.logo__formulario{
+    max-height: 22rem;
+}
+
+.main__contactanos--titulo{
+    top: 45% !important;
+}
 
 
 /* -------------- pag LOGIN ----------------------- */
@@ -97,7 +101,7 @@
     }
 
     .page__subtitle{
-        top: 40% !important;
+        top: 45% !important;
 
     }
 
@@ -110,7 +114,7 @@
     }
 
     .main__btn {
-        top: 55% !important;
+        top: 65% !important;
     }
 
     .quieroinscribirme{
@@ -162,9 +166,17 @@
     display: none;
 }
 
-.main__contactanos--titulo{
-    top: 60%
-}  
+.main__contactanos--titulo--hijo{
+    font-size: 4rem !important;
+}
+
+.main__formulario--contenedor{
+    grid-template-columns: 1fr !important;
+}
+
+/* .main__contactanos--titulo{
+    top: 55% !important;
+} */
 
 
 /* ------------------ pag EVENTOS ----------------------- */
@@ -381,6 +393,61 @@ h4{
 
 .cards__capacitacion{
     margin: 0.3rem 0.3rem !important;
+}
+
+
+}
+
+
+
+
+@media only screen and (max-width: 370px){
+
+.main__btn {
+    top: 52% !important;
+}
+
+.video{
+    padding-top: 3rem;
+ }
+
+
+ .main_video--contenedor{
+    height: auto !important;
+    width: auto !important;
+    padding: 0.1rem !important;
+ }
+
+.main__video{
+    width: fit-content !important;
+}
+
+
+
+/* ------------------ pag EVENTOS ----------------------- */
+
+.showcase h1{
+    font-size: 2rem !important;
+    justify-self: center !important;
+}
+
+
+/* -------------- pag LOGIN ----------------------- */
+
+
+.form__login{
+    padding: 1.5rem 2rem !important;
+}
+
+
+/* ---------------- pag CAPACITACION ----------------------- */
+
+.showcase__capacitacion h1 {
+    font-size: 1.9rem !important;
+}
+
+.banner__titulo h2{
+    font-size: 2.2rem !important;
 }
 
 
