--- a/scss/style.scss
+++ b/scss/style.scss
@@ -181,7 +181,7 @@ h4 {
 .main__contactanos--titulo{
     text-align: center;
     position: absolute;
-    top: 70%;
+    top: 40%;
     left: 4%;
     text-shadow: 5px 5px 2px black;
 }  
@@ -251,7 +251,9 @@ h4 {
 
 .logo__formulario{
     display: flex;
-    max-height: 30rem;
+    height: auto;
+    width: auto;
+    flex-wrap: wrap;
 }
 
 
@@ -457,6 +459,8 @@ h4 {
     font-weight: 500;
 }
 
-
+.cards__capacitacion--individuales i{
+    margin-bottom: 1rem !important;
+}
 
 
