--- a/scss/_mediaquerrys.scss
+++ b/scss/_mediaquerrys.scss
@@ -25,7 +25,7 @@
         font-size: 4.3rem;
     }
     .page__subtitle{
-        top: 50% !important;
+        top: 35% !important;
         left: 0%;  
         right: 0%;
         padding: 0.5rem;
@@ -34,7 +34,7 @@
         font-size: 1.3rem;
     }
     .main__btn {
-        top: 75% !important;
+        top: 55% !important;
         left: 0%;  
         right: 0%;
     }
@@ -100,22 +100,15 @@
         font-weight: 500 !important;
     }
 
-    .page__subtitle{
+
+    .main__btn {
         top: 45% !important;
-
-    }
-
-    .page__title{
-        top: 15% !important;
     }
 
     h1{
         font-size: 3.8rem !important;
     }
-
-    .main__btn {
-        top: 65% !important;
-    }
+   
 
     .quieroinscribirme{
         padding: 0.5rem 0.75rem !important;
@@ -173,10 +166,6 @@
 .main__formulario--contenedor{
     grid-template-columns: 1fr !important;
 }
-
-/* .main__contactanos--titulo{
-    top: 55% !important;
-} */
 
 
 /* ------------------ pag EVENTOS ----------------------- */
@@ -277,12 +266,12 @@
 }
 
 .page__subtitle{
-    top: 25% !important;
+    top: 20% !important;
 
 }
 
 .page__title{
-    top: 15% !important;
+    top: 12% !important;
 }
 
 h1{
@@ -290,7 +279,7 @@ h1{
 }
 
 .main__btn {
-    top: 45% !important;
+    top: 35% !important;
 }
 
 .quieroinscribirme{
@@ -404,7 +393,7 @@ h4{
 @media only screen and (max-width: 370px){
 
 .main__btn {
-    top: 52% !important;
+    top: 37% !important;
 }
 
 .video{
@@ -416,10 +405,21 @@ h4{
     height: auto !important;
     width: auto !important;
     padding: 0.1rem !important;
+    display: flex !important;
+    justify-content: center !important;
  }
 
 .main__video{
-    width: fit-content !important;
+    width: auto !important;
+
+}
+
+.page__subtitle{
+    top: 20% !important;
+}
+
+.page__title{
+    top: 13% !important;
 }
 
 
@@ -429,6 +429,11 @@ h4{
 .showcase h1{
     font-size: 2rem !important;
     justify-self: center !important;
+}
+
+
+.fa-angles-right{
+    margin-bottom: 0.5rem !important;
 }
 
 
